<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.driver_profile.DriverProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- profile image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/ivDriverProfilePic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:background="@drawable/profile_pic_border"
                android:contentDescription="@string/profile_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_the_image_to_change_the_profile_picture"
                android:textSize="14sp"
                android:textColor="#8E8E8E"
                android:layout_marginTop="8dp"/>
        </LinearLayout>



        <!-- first name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDriverFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusBottomEnd="28dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/edit_pencil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:enabled="false"
                    android:text="@string/driver_first_name"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- last name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDriverLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusBottomEnd="28dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/edit_pencil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverLastName"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:enabled="false"
                    android:text="@string/driver_last_name"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDriverAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusBottomEnd="28dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/edit_pencil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverAddress"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="16dp"
                    android:enabled="false"
                    android:text="@string/driver_address"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDriverPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusBottomEnd="28dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/edit_pencil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverPhone"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:enabled="false"
                    android:text="@string/driver_phone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="24dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDriverEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="28dp"
                app:boxCornerRadiusTopEnd="28dp"
                app:boxCornerRadiusBottomStart="28dp"
                app:boxCornerRadiusBottomEnd="28dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/edit_pencil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDriverEmail"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:enabled="false"
                    android:text="@string/driver_email"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- change password -->
        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp"
            android:text="@string/change_password"
            android:textColor="@color/purple"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"/>


        <!-- buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDriverResetChanges"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/reset_edit"/>

            <Button
                android:id="@+id/btnDriverSaveChanges"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/save_changes"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
